# rabies

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  monitor  pyocd.yaml  rabi.pio  rules.mk  setup_gdb.sh  usb_descriptors.c  ws2812.c  ws2812.pio
akela-rp2040/: CMakeLists.txt  tusb_config.h
doc/: protocol2.md
librabi/test/: wolf_test
rabi-pcb/: .gitignore  case.stl  case.wings  raddr.step  raddr.stl  wfp.patch
rabi-pcb/gerber/: raddr-B_Cu.gbl  raddr-B_Mask.gbs  raddr-B_Paste.gbp  raddr-B_Silkscreen.gbo  raddr-Edge_Cuts.gm1  raddr-F_Cu.gtl  raddr-F_Mask.gts  raddr-F_Paste.gtp  raddr-F_Silkscreen.gto  raddr-NPTH-drl_map.gbr  raddr-NPTH.drl  raddr-PTH-drl_map.gbr  raddr-PTH.drl
rabi-py32f0/: Makefile  rules.mk  setup_gdb.sh  sqq
rabi-py32f0/raddr/: clk_config.c  input_capture.c  input_capture.h  output_timer.h  pack.c  pack.h  py32f0xx_hal_conf.h  uid.c  uid.h  wolf.h
raddr/: clk_config.h  input_capture.c  input_capture.h  main.c  output_timer.c  output_timer.h  pack.c  pack.h  py32f0xx_hal_conf.h  uid.c  wolf.h
rp2040-akela/: README.md  flash  rabi.pio
